# nali

./: CONTRIBUTING.md  LICENSE  README.md  generate_schools_status.py  pyproject.toml
.github/workflows/: daily-status.yml  release.yml  test-nali.yml
docs/: CNAME  index.html  script.js  status.json
nali/: __init__.py  enums.py  exceptions.py
nali/scrapers/: base.py
src/nali/: core.py  enums.py  models.py
src/nali/scrapers/: __init__.py  hansung.py  template.py
tests/: conftest.py  test_scrapers.py
