[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "nali"
version = "2025.7.4"
dependencies = [
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
]
requires-python = ">=3.10"
authors = [
    { name = "Wizley", email = "wizley9999@gmail.com" },
]
maintainers = [
    { name = "Wizley", email = "wizley9999@gmail.com" },
]
description = "대학별 공지사항 크롤링을 위한 통합 스크래핑 도구"
readme = "README.md"
license = "MIT"

[project.urls]
Homepage = "https://nali.wizley.io"
Repository = "https://github.com/wizley9999/nali.git"
